// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delivery-tracking/shipment-info/shippo ShipmentInfo when shipment is delivered should return valid shipment info as result 1`] = `
Ok {
  "value": Array [
    Object {
      "carrier": "shippo",
      "destination": Object {
        "address": Object {
          "addressLocality": "Chicago",
          "countryCode": "US",
          "postalCode": "60611",
        },
      },
      "estimatedDeliveryDate": "2021-11-08T07:03:30.944Z",
      "events": Array [
        Object {
          "location": undefined,
          "statusCode": "unknown",
          "statusText": "The carrier has received the electronic shipment information.",
          "timestamp": "2021-11-01T19:54:08.906Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "San Francisco",
              "countryCode": "US",
              "postalCode": "94103",
            },
          },
          "statusCode": "transit",
          "statusText": "Your shipment has departed from the origin.",
          "timestamp": "2021-11-02T23:54:08.906Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "Memphis",
              "countryCode": "US",
              "postalCode": "37501",
            },
          },
          "statusCode": "failure",
          "statusText": "The Postal Service has identified a problem with the processing of this item and you should contact support to get further information.",
          "timestamp": "2021-11-04T11:54:08.906Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "Chicago",
              "countryCode": "US",
              "postalCode": "60611",
            },
          },
          "statusCode": "delivered",
          "statusText": "Your shipment has been delivered.",
          "timestamp": "2021-11-03T23:54:08.906Z",
        },
      ],
      "origin": Object {
        "address": Object {
          "addressLocality": "San Francisco",
          "countryCode": "US",
          "postalCode": "94103",
        },
      },
      "status": Object {
        "location": Object {
          "address": Object {
            "addressLocality": "Chicago",
            "countryCode": "US",
            "postalCode": "60611",
          },
        },
        "statusCode": "delivered",
        "statusText": "Your shipment has been delivered.",
        "timestamp": "2021-11-03T23:54:08.906Z",
      },
      "trackingNumber": "SHIPPO_DELIVERED",
    },
  ],
}
`;

exports[`delivery-tracking/shipment-info/shippo ShipmentInfo when shipment is in pre transit should return valid shipment info as result 1`] = `
Ok {
  "value": Array [
    Object {
      "carrier": "shippo",
      "destination": Object {
        "address": Object {
          "addressLocality": "Chicago",
          "countryCode": "US",
          "postalCode": "60611",
        },
      },
      "estimatedDeliveryDate": "2021-11-08T07:03:30.126Z",
      "events": Array [
        Object {
          "location": undefined,
          "statusCode": "pre_transit",
          "statusText": "The carrier has received the electronic shipment information.",
          "timestamp": "2021-11-01T19:54:09.208Z",
        },
      ],
      "origin": Object {
        "address": Object {
          "addressLocality": "San Francisco",
          "countryCode": "US",
          "postalCode": "94103",
        },
      },
      "status": Object {
        "location": undefined,
        "statusCode": "pre_transit",
        "statusText": "The carrier has received the electronic shipment information.",
        "timestamp": "2021-11-01T19:54:09.208Z",
      },
      "trackingNumber": "SHIPPO_PRE_TRANSIT",
    },
  ],
}
`;

exports[`delivery-tracking/shipment-info/shippo ShipmentInfo when shipment is in transit should return valid shipment info as result 1`] = `
Ok {
  "value": Array [
    Object {
      "carrier": "shippo",
      "destination": Object {
        "address": Object {
          "addressLocality": "Chicago",
          "countryCode": "US",
          "postalCode": "60611",
        },
      },
      "estimatedDeliveryDate": "2021-11-08T07:03:30.541Z",
      "events": Array [
        Object {
          "location": undefined,
          "statusCode": "unknown",
          "statusText": "The carrier has received the electronic shipment information.",
          "timestamp": "2021-11-01T19:54:08.906Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "San Francisco",
              "countryCode": "US",
              "postalCode": "94103",
            },
          },
          "statusCode": "transit",
          "statusText": "Your shipment has departed from the origin.",
          "timestamp": "2021-11-02T23:54:08.906Z",
        },
      ],
      "origin": Object {
        "address": Object {
          "addressLocality": "San Francisco",
          "countryCode": "US",
          "postalCode": "94103",
        },
      },
      "status": Object {
        "location": Object {
          "address": Object {
            "addressLocality": "San Francisco",
            "countryCode": "US",
            "postalCode": "94103",
          },
        },
        "statusCode": "transit",
        "statusText": "Your shipment has departed from the origin.",
        "timestamp": "2021-11-02T23:54:08.906Z",
      },
      "trackingNumber": "SHIPPO_TRANSIT",
    },
  ],
}
`;

exports[`delivery-tracking/shipment-info/shippo ShipmentInfo when shipment is returned should return valid shipment info as result 1`] = `
Ok {
  "value": Array [
    Object {
      "carrier": "shippo",
      "destination": Object {
        "address": Object {
          "addressLocality": "Chicago",
          "countryCode": "US",
          "postalCode": "60611",
        },
      },
      "estimatedDeliveryDate": "2021-11-08T07:03:31.522Z",
      "events": Array [
        Object {
          "location": undefined,
          "statusCode": "unknown",
          "statusText": "The carrier has received the electronic shipment information.",
          "timestamp": "2021-11-01T19:54:33.443Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "San Francisco",
              "countryCode": "US",
              "postalCode": "94103",
            },
          },
          "statusCode": "transit",
          "statusText": "Your shipment has departed from the origin.",
          "timestamp": "2021-11-02T23:54:33.443Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "Memphis",
              "countryCode": "US",
              "postalCode": "37501",
            },
          },
          "statusCode": "failure",
          "statusText": "The Postal Service has identified a problem with the processing of this item and you should contact support to get further information.",
          "timestamp": "2021-11-04T11:54:33.443Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "Chicago",
              "countryCode": "US",
              "postalCode": "60611",
            },
          },
          "statusCode": "delivered",
          "statusText": "Your shipment has been delivered.",
          "timestamp": "2021-11-03T23:54:33.443Z",
        },
        Object {
          "location": Object {
            "address": Object {
              "addressLocality": "San Francisco",
              "countryCode": "US",
              "postalCode": "94103",
            },
          },
          "statusCode": "unknown",
          "statusText": "Your shipment has been returned to the original sender.",
          "timestamp": "2021-11-04T19:54:33.443Z",
        },
      ],
      "origin": Object {
        "address": Object {
          "addressLocality": "San Francisco",
          "countryCode": "US",
          "postalCode": "94103",
        },
      },
      "status": Object {
        "location": Object {
          "address": Object {
            "addressLocality": "San Francisco",
            "countryCode": "US",
            "postalCode": "94103",
          },
        },
        "statusCode": "unknown",
        "statusText": "Your shipment has been returned to the original sender.",
        "timestamp": "2021-11-04T19:54:33.443Z",
      },
      "trackingNumber": "SHIPPO_RETURNED",
    },
  ],
}
`;

exports[`delivery-tracking/shipment-info/shippo ShipmentInfo when shipment status is unknown should return valid shipment info as result 1`] = `
Ok {
  "value": Array [
    Object {
      "carrier": "shippo",
      "destination": Object {
        "address": Object {
          "addressLocality": "Chicago",
          "countryCode": "US",
          "postalCode": "60611",
        },
      },
      "estimatedDeliveryDate": "2021-11-08T07:03:32.015Z",
      "events": Array [
        Object {
          "location": undefined,
          "statusCode": "unknown",
          "statusText": "The carrier has received the electronic shipment information.",
          "timestamp": "2021-11-01T19:54:08.906Z",
        },
      ],
      "origin": Object {
        "address": Object {
          "addressLocality": "San Francisco",
          "countryCode": "US",
          "postalCode": "94103",
        },
      },
      "status": Object {
        "location": undefined,
        "statusCode": "unknown",
        "statusText": "The carrier has received the electronic shipment information.",
        "timestamp": "2021-11-01T19:54:08.906Z",
      },
      "trackingNumber": "SHIPPO_UNKNOWN",
    },
  ],
}
`;
